<?xml version="1.0"?>
<package>
  <name>lvr_ros</name>
  <version>1.0.0</version>
  <description>converts point clouds into meshes using lvr</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="hdeeken@uos.de">Henning Deeken</author>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mesh_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>hyperspectral_calibration</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mesh_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>hyperspectral_calibration</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
