<?xml version="1.0"?>
<package format="2">
  <name>lvr_ros</name>
  <version>1.0.0</version>
  <description>converts point clouds and attributes into meshes and mesh attributes using lvr2</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD 3-Clause</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="hdeeken@uos.de">Henning Deeken</author>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>genmsg</depend>
  <depend>lvr2</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mesh_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>label_manager</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
